<resources>
    <string name="app_name">Notepad</string>
    <string name="search">Search…</string>
    <string name="btArchive">Archive</string>

    <string name="titleHint">Title</string>
    <string name="contentHint">Content</string>
    <string name="notesSavedToast">Note saved</string>
    <string name="toolBarSaveTitle">Save</string>
    <string name="toolBarFavouriteTitle">Favourite</string>
    <string name="toolBarFilterFavourite">Filter favourites</string>
    <string name="toolBarFilterArchival">Filter archival</string>
</resources>
